--- a/si-app/src/app/start/start.component.html
+++ b/si-app/src/app/start/start.component.html
@@ -1,6 +1,6 @@
 <h1>Smart Insurance</h1>
-
-<div style="height:30px;"></div>
+<h5>Versicherungswechsel leicht gemacht</h5>
+<div style="height:50px;"></div>
 <label for="picture">Fahrzeugschein wählen</label>
 
 <div style="height:10px;"></div>
@@ -10,3 +10,6 @@
 <button mat-raised-button color="accent" [disabled]="!picture" (click)="onSubmit()">Hochladen und Beitrag berechnen</button>
 <div style="height:30px;"></div>
 <img src="/assets/loader.gif" *ngIf="s.loading" />
+<div *ngIf="s.error">
+    <h6>Ihr Foto konnte nicht erkannt werden</h6>
+</div>
