--- a/si-app/src/app/start/start.component.html
+++ b/si-app/src/app/start/start.component.html
@@ -1,5 +1,5 @@
 <h1>Smart Insurance</h1>
-<h5>Versicherungswechsel leicht gemacht</h5>
+<h5>optimale Sicherheit ohne Frustration</h5>
 <div style="height:50px;"></div>
 <label for="picture">Fahrzeugschein wählen</label>
 
