--- a/si-app/src/app/start/start.component.html
+++ b/si-app/src/app/start/start.component.html
@@ -11,5 +11,5 @@
 <div style="height:30px;"></div>
 <img src="/assets/loader.gif" *ngIf="s.loading" />
 <div *ngIf="s.error">
-    <h6>Ihr Foto konnte nicht erkannt werden</h6>
+    <h6>Fahrzeug wurde nicht gefunden</h6>
 </div>
