--- a/si-app/src/app/final/final.component.html
+++ b/si-app/src/app/final/final.component.html
@@ -1,3 +1,3 @@
 <p>
-  Bestellung übermittelt. Sie erhalten demnächst ein Bestätigungsschreiben.
+  Bestellung übermittelt. Sie erhalten in zwei Tagen ein Bestätigungsschreiben.
 </p>
