--- a/si-app/src/app/start/start.component.html
+++ b/si-app/src/app/start/start.component.html
@@ -4,10 +4,10 @@
 <label for="picture">Fahrzeugschein wählen</label>
 
 <div style="height:10px;"></div>
-<input class="mat-raised-button mat-accent" type="file" id="picture" (change)="onFileChange($event)" #fileInput accept="image/*">
+<input class="mat-raised-button mat-primary" type="file" id="picture" (change)="onFileChange($event)" #fileInput accept="image/*">
   
 <div style="height:30px;"></div>
-<button mat-raised-button color="accent" [disabled]="!picture" (click)="onSubmit()">Hochladen und Beitrag berechnen</button>
+<button mat-raised-button color="primary" [disabled]="!picture" (click)="onSubmit()">Hochladen und Beitrag berechnen</button>
 <div style="height:30px;"></div>
 <img src="/assets/loader.gif" *ngIf="s.loading" />
 <div *ngIf="s.error">
