--- a/si-app/src/app/price/price.component.html
+++ b/si-app/src/app/price/price.component.html
@@ -1,5 +1,4 @@
 <h2>Ihr Fahrzeug</h2>
-<h5>aus dem Fahrzeugschein</h5>
 <table>
   <tr>
     <td>Hersteller:</td>
@@ -14,6 +13,23 @@
     <td>{{s.leistung}}PS</td>  
   </tr>
 </table>
+
+<h2>Vergleich</h2>
+<table class="compare" cellspacing="0" cellpadding="0">
+  <tr>
+    <td><img src="/assets/green.png" width="15" height="15" class="thumb" />Deckungsbeitrag</td>
+    <td>1 Mio € bisher, 2 Mio zukünftig</td>
+  </tr>
+  <tr>
+    <td><img src="/assets/green.png" width="15" height="15" class="thumb" />Marderschaden</td>
+    <td>bisher nicht, zukünftig ja</td>
+  </tr>
+  <tr>
+    <td><img src="/assets/red.png" width="15" height="15" class="thumb" />Werkstattbindung</td>
+    <td>bisher nicht, zukünftig ja</td>
+  </tr>  
+</table>
+
 <h2>Ihr Angebot</h2>
 <table>
   <tr>
