--- a/si-app/src/app/start/start.component.html
+++ b/si-app/src/app/start/start.component.html
@@ -12,7 +12,7 @@
   
 <div style="height:10px;"></div>
 <label class="mat-raised-button mat-primary" for="picture2" class="custom-file-upload">
-    optional: Foto vom aktuellen Versicherungsschein
+    Foto vom aktuellen Versicherungsschein
 </label>
 <input  type="file" id="picture2"  accept="image/*">
 
